<resources>
    <string name="search_title">Ara</string>
    <string name="search_hint">Kod, Takım, Ülke, Lig</string>
    <string name="app_name">SkorAdam</string>
    <string name="splash">Splash</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Retry</string>
    <string name="action_settings">Settings</string>
    <string name="failed_to_connect_with_server">Bağlantı hatası, lütfen tekrar deneyiniz</string>
    <string name="mon">Pzt</string>
    <string name="tues">Sal</string>
    <string name="wed">Çar</string>
    <string name="thur">Per</string>
    <string name="fri">Cum</string>
    <string name="sat">Cmt</string>
    <string name="sun">Paz</string>
    <string name="cal_name">Seç</string>
    <string name="iv">IY</string>
    <string name="ms">MS</string>
    <string name="detay">Detay</string>
    <string name="iddaa">iddaa</string>
    <string name="dk">dk.</string>
    <string name="postponed">Ertelendi</string>
    <string name="matches">Maçlar</string>
    <string name="number">No</string>
    <string name="player_name">Oyuncu</string>
    <string name="position">Pos</string>
    <string name="country">Ülke</string>
    <string name="stats">İstatistikler</string>
    <string name="team_details">Takim Detayi</string>
    <string name="stadium">Stadyum</string>
    <string name="club_information">Kulup Bilgileri</string>
    <string name="club_official_name">Kulup Resmi Adi</string>
    <string name="year_founded">Kuruluş Yili</string>
    <string name="club_head">Kulüp Başkanı</string>
    <string name="coach">Teknik Direktör</string>
    <string name="website">Web Sitesi</string>
    <string name="twitter">Twitter Adresi</string>
    <string name="toolbar_favorite">Favorilerim</string>
    <string name="live">Canlı</string>
    <string name="standings">Puan/Fiks.</string>
    <string name="turkey">Turkey</string>
    <string name="personal_Information">Kişisel Bilgiler</string>
    <string name="player_Information">Oyuncu Bilgisi</string>
    <string name="national_team">Milli Takım</string>
    <string name="player_age">Yaş</string>
    <string name="player_height">Boy</string>
    <string name="preferred_foot">Tercih Ettigi Ayak</string>
    <string name="player_position">Pozisyon</string>
    <string name="player_weight">Kilo</string>
    <string name="teams_played">Oynadigi Takimlar</string>
    <string name="teams_played_year">Yil</string>
    <string name="teams_played_team">Takim</string>
    <string name="teams_played_contract">Kontrat</string>
    <string name="career_statistics">Kariyer İstatistikleri</string>
    <string name="match">Maç</string>
    <string name="league_year">Lig/Yil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_page">DetailPageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="whoWillWin">Kim Kazanır?</string>
    <string name="detal_page_standings">Puan Durumu</string>
    <string name="detal_page_standings_mini">Puan D.</string>
    <string name="main">Genel</string>
    <string name="homeTeam">İç Saha</string>
    <string name="awayTeam">Dış Saha</string>
    <string name="team">Takım</string>
    <string name="team_squad">%1$s Takim Kadrosu</string>
    <string name="goalAverage">Gol Ortalamaları</string>
    <string name="comments">Tahmin Ligi</string>
    <string name="matchIdea">Senin Tahminin</string>
    <string name="liveDetailPage">Devam Ediyor</string>
    <string name="statusPlayed">Sona Erdi</string>
    <string name="halfTime">IY</string>
    <string name="statusCanceled">İptal</string>
    <string name="statusInterrupted">Ara Verildi</string>
    <string name="statusDelayed">Rötarlı</string>
    <string name="draw">Beraberlik</string>
    <string name="stadiumCapacity">Kapasite</string>
    <string name="yearBuilt">İnşa Tarihi</string>
    <string name="attendance">Doluluk</string>
    <string name="noComments">Bu maç ile ilgili bir tahmin bulunmamaktadır.</string>
    <string name="recent5">Son 5 Maç</string>
    <string name="recent5home">Evindeki Son 5 Maç</string>
    <string name="recent5away">Deplasmandaki Son 5 Maç</string>
    <string name="head2head">Karşılıklı</string>
    <string name="puan">Puan/Fiks.</string>
    <string name="fullTime">Maç Sonucu</string>
    <string name="prediction">Senin Tahminin</string>
    <string name="halfTimeScore">İlk Yarı</string>
    <string name="doubleChance">Çifte Şans</string>
    <string name="handicap">Handikap</string>
    <string name="mutalgoal">Karşılıklı Gol</string>
    <string name="subtop">Alt-Üst</string>
    <string name="totalGoals">Toplam Gol</string>
    <string name="submit">Gönder</string>
    <string name="statistics">İstatistik</string>
    <string name="analysis">Analiz</string>
    <string name="matchStatistics">Maç İçi</string>
    <string name="gameStatistics">Sezon</string>
    <string name="avgPercents">Topa Sahip Olma (%)</string>
    <string name="fou">Faul</string>
    <string name="sot">Toplam Şut</string>
    <string name="son">İsabetli Şut</string>
    <string name="soff">İsabetsiz Şut</string>
    <string name="cor">Kornerler</string>
    <string name="blk">Kurtarış</string>
    <string name="frk">Frikik</string>
    <string name="off">Ofsayt</string>
    <string name="head2headMatches">Karşılıklı Maçlar</string>
    <string name="totalGamePercentage">Topla Oynama Yüzdesi</string>
    <string name="titleGoller">Goller</string>
    <string name="titleAssists">Asist</string>
    <string name="titleCards">Kartlar</string>
    <string name="titleSubstitution">Oyuncu Değişiklikleri</string>
    <string name="detailedStatisticHeader">Ortalama İstatistikler</string>
    <string name="matchResultIddaa">Maç Sonu İddaa Oranları</string>
    <string name="halfTimeResultIddaa">İlk Yarı İddaa Oranları</string>
    <string name="doubleChanceIddaa">Çifte Şans İddaa Oranları</string>
    <string name="handicapResultIddaa">Handikap İddaa Oranları</string>
    <string name="aboveBelow15ResultIddaa">1.5 Alt Üst İddaa Oranları</string>
    <string name="aboveBelow35ResultIddaa">3.5 Alt Üst İddaa Oranları</string>
    <string name="aboveBelow25ResultIddaa">2.5 Alt Üst İddaa Oranları</string>
    <string name="aboveBelowHalfTime15ResultIddaa">I.Y 1.5 Alt Üst İddaa Oranları</string>
    <string name="TotalGoalResultIddaa">Toplam Gol İddaa Oranları</string>
    <string name="bothTeamScoredResultIddaa">Karş. Gol İddaa Oranları</string>
    <string name="title_activity_league_details">LeagueDetailsActivity</string>
    <string name="title_activity_favorites">Favorilerim</string>
    <string name="goal">Gol</string>
    <string name="asist">Asist</string>
    <string name="redCards">K. Kart</string>
    <string name="yellowCards">S. Kart</string>
    <string name="matches_played">Oynadığı Maçlar</string>
    <string name="fixtures">Fikstür</string>
    <string name="king">Krallığı</string>
    <string name="fixture">Fikstur</string>
    <string name="title_activity_live">LiveActivity</string>
    <string name="tournaments">Turnuvalar</string>
    <string name="failed_to_load_comments">Failed to load comments from the server</string>
    <string name="unable_to_retrive_data_from_server">unable to retrieve data from server, please try again later.</string>
    <string name="live_toolbar">Canlı Sonuçlar</string>
    <string name="lineup">Kadrolar</string>
    <string name="kadro">Kadro</string>
    <string name="noInformationYet">Kadro Bilgisi Henüz Bulunmamaktadır.</string>
    <string name="bench">Yedekler</string>
    <string name="ligTv">tv</string>
    <string name="commentsShort">Tahmin</string>
    <string name="TurkeySuperLeague">Türkiye Süper Ligi</string>
    <string name="superLeagueFlag">tr</string>
    <string name="loginToAccount">Hesabınıza Giriş Yapın</string>
    <string name="username">kullanıcı adı</string>
    <string name="password">şifre</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="cancel">Vazgeç</string>
    <string name="register">Kayıt Ol</string>
    <string name="title_activity_registration">Sign up</string>
    <string name="keeper">Kaleci</string>
    <string name="midfield">Orta saha</string>
    <string name="forward">Forvet</string>
    <string name="defense">Defans</string>
    <string name="minutes_title">Gol Bulduğu Dakikalar</string>
    <string name="min">Dk.</string>
    <string name="scored">Attığı</string>
    <string name="received">Yediği</string>
    <string name="season_stats">Sezon Ortalamaları</string>
    <string name="possession">Topa Sahip Olma %</string>
    <string name="goals_scored">Atılan Gol</string>
    <string name="goals_received">Yenilen Goal</string>
    <string name="goals_scored_by_foot">Ayakla Atılan Gol</string>
    <string name="goals_scored_by_head">Kafayla Atılan Gol</string>
    <string name="total_shots">Toplam Şut</string>
    <string name="shots_on_target">İsabetli Şut</string>
    <string name="shots_blocked">İsabetsiz Şut</string>
    <string name="save">Kurtarış</string>
    <string name="freekick">Frikik</string>
    <string name="corner">Kornerler</string>
    <string name="prompt_email">E-Posta</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Kayıt Ol</string>
    <string name="confirm_password">Şifre Tekrar</string>
    <string name="action_logout">Çıkış</string>
    <string name="prompt_select_estimate">Lütfen bir tahmin seçininiz.</string>
    <string name="votinDisabled">Oy verilme işlemi maç başladıktan sonra yapılamaz</string>
    <string name="subtop35">3.5 Alt-Üst</string>
    <string name="subtop15">1.5 Alt-Üst</string>
    <string name="subiytop15">IY-1.5 Alt-Üst</string>
    <string name="iyms">IY / MS</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fa_tv">&#xf26c;</string>
    <string name="fa_chevron_circle_up">&#xf139;</string>
    <string name="no_live_match">Henüz başlamış canlı maç bulunmamaktadır</string>
    <string name="no_fav_match">Favorilerinize eklenmiş bir maç bulunmamaktadır. \n\r Maçlardan bildirim alabilmek için takip etmek istediğiniz maçları favorilerinize ekleyebilirsiniz</string>
    <string name="all_matches">Tüm Maçlar</string>
    <string name="iddaa_bulteni">Iddaa Bülteni</string>
    <string name="tahmin_ligi">Tahmin Ligi</string>
    <string name="news">Haberler</string>
    <string name="transfers">Transferler</string>
    <string name="msg_back_title">SkorAdam</string>
    <string name="msg_back_information">Uygulamadan çıkış yapmak istiyor musunuz?</string>
    <string name="msg_back_exitbutton">Çıkış</string>
    <string name="msg_back_cancelbutton">İptal</string>
    <string name="privacy_agreement">Gizlilik Sözleşmesi</string>
    <string name="tl_tittle_uzman">Uzman</string>
    <string name="tl_tittle_totalmatch">Toplam Maç</string>
    <string name="tl_tittle_basariorani">Başarı Oranı</string>
    <string name="tl_tittle_skor">Skor</string>
    <string name="etiketler">Etiketler:</string>
    <string name="ilgili_haberler">İlgili Haberler</string>
    <string name="player_info">Oyuncu bilgileri için tıklayınız</string>
</resources>