<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="@color/grass_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_information_tittle"
            style="@style/dialogTextView"
            android:text="@string/msg_back_title"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_information_message"
            style="@style/dialogTextView"
            android:layout_marginBottom="24dp"
            android:text="@string/msg_back_information" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_information_exit"
                    style="@style/dialogButton"
                    android:text="@string/msg_back_exitbutton" />
                <Button
                    android:id="@+id/dialog_information_cancel"
                    style="@style/dialogButton"
                    android:layout_marginLeft="8dp"
                    android:text="@string/msg_back_cancelbutton" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>