<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#e0e7e8"
              android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/date_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/colorAccent">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/horizontal_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:background="@color/colorAccentDark"
                android:scrollbars="none" />
    </RelativeLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:card_view="http://schemas.android.com/apk/res-auto"
                  xmlns:fresco="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingTop="5dp"
                  android:paddingLeft="3dp"
                  android:paddingRight="3dp">

        <android.support.v7.widget.CardView
                android:id="@+id/toggle_manager"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:visibility="gone"
                card_view:cardBackgroundColor="@color/header_color"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="1dp"
                card_view:cardUseCompatPadding="false"
                card_view:contentPadding="3dp"
                card_view:contentPaddingLeft="12dp"
                android:layout_marginBottom="5dp">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="21dp"
                        android:textAlignment="center"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:id="@+id/total_match"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="center"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:textStyle="normal"
                        android:textSize="21sp"
                        android:color="#cccccc"
                        android:text="@string/fa_chevron_circle_up"
                        android:id="@+id/toggle_all"
                />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="gone" android:id="@+id/no_fav_match">
            <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/smartphone"
                    android:src="@drawable/smartphone"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_below="@+id/smartphone"
                      android:textAlignment="center"
                      android:layout_marginTop="5dp"
                      android:textSize="14sp"
                      android:text="@string/no_fav_match"></TextView>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/no_live_match" android:visibility="gone">
            <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/pitch"
                    android:src="@drawable/pitch"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_below="@+id/pitch"
                      android:textAlignment="center"
                      android:text="@string/no_live_match"
            />
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
                android:background="#e0e7e8"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:animateLayoutChanges="false"
                android:layout_marginTop="-6dp"
                android:scrollbars="vertical" />


        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>